1999-02-18  Harri Porten  <porten@kde.org>

	* cddb.cpp: work around snprintf() for non-GNUish systems
	* cdrom.c, cdinfo.c, plat_linux.c: removed forward declaration of
	strchr(). It broke compilation with recent glibc and wasn't used
	anyway (bug #666 and #671). 

1998-12-22  Sam Maloney <thufir@illogic.ml.org>

	* Added to last commit, as so the 'autodock' checkbox would be
	disabled when 'docking' was unchecked, and vice versa.

1998-12-20  Sam Maloney <thufir@illogic.ml.org>

	* Just simple bugfixes to make more stable like...:
	* Fixed so that when one turns on or off 'enable docking' it
	adds/removes the dockwidget in the panel (instead of before one
	would have to restart kscd).
	* Fixed so that if one turned off 'enable docking' but still had
	'autodock enabled' on, then it would NOT dock (and remove the
	widget).

1998-12-12  Christian Esken  <esken@kde.org>

	* Tweaked docking a bit more. Under certain circumstances,
	dock_widget->dock() correctly does not get called at the start
	of the program. So if you docked, the window just vanished.	
	I added a call to dock_widget->dock()  at "appropiate" places.

1998-11-28  Bernd Wuebben  <wuebben@petit.cornell.edu>

	* kscd.cpp: resinstated old look and behavior
	Sam, we should talk ...

1998-11-20 Sam Maloney <thufir@illogic.ml.org>

	* Fixed bug/"missing thing" were it would just crash when loading
	  up if it couldn't find the cddb base dir. Now it will use
	  InexactDialog to prompt the user for the directory. (cancel button
	  will force it to get from remote). 
	* NOTE: Im just going fix the inexact dialog box so it can be
	  single line input, (for the cddb dialog), then ill probably
	  release 1.2.4, unless anyone has any objections. (to lazy to fix
	  tonite)

1998-11-11 Sam Maloney <thufir@illogic.ml.org>

	* Fixed bug with debug flag being messed up when docking
	  (incorrect extern statement)
	* Worked around a wierd bug thing with docking. (consult
	  docking.cpp in toggleState() )
